--- a/SabbathText.Web/Views/Home/Index.cshtml
+++ b/SabbathText.Web/Views/Home/Index.cshtml
@@ -1,31 +1,35 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Sabbath Text</title>
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <link href="//fonts.googleapis.com/css?family=PT+Sans:700,400&subset=cyrillic" rel="stylesheet">
+    <link href="~/Content/sunrise/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/sunrise/css/sunrise.css" rel="stylesheet" />
+</head>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+<body>
+    <div class="container">
+        <h1 class="page-heading">Sabbath Text</h1>
+        <p class="description" style="font-weight: bold; font-style: italic;">
+            &ldquo;Then God blessed the seventh day and made it holy, <br /> because on it he rested from all the work of creating that he had done.&rdquo;
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+
+        <form class="subscription-form form-inline" id="subscription-form" novalidate>
+            <input type="text" class="subscription-email" id="subscription-email" name="email" placeholder="Phone Number">
+
+            <div class="subscription-submit-container">
+                <button class="subscription-submit btn btn-large" id="subscription-submit">GET STARTRTED</button>
+            </div>
+        </form>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+
+    <!-- Scripts -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="@Url.Content("~/Content/sunrise/js/jquery.min.js")"><\/script>')</script>    
+    <script src="~/Content/sunrise/js/sunrise.js"></script>
+</body>
+</html>
