--- a/SabbathText.Web/Views/Home/Index.cshtml
+++ b/SabbathText.Web/Views/Home/Index.cshtml
@@ -18,8 +18,8 @@
             &ldquo;Then God blessed the seventh day and made it holy, <br /> because on it he rested from all the work of creating that he had done.&rdquo;
         </p>
 
-        <form class="subscription-form form-inline" id="subscription-form" novalidate>
-            <input type="text" class="subscription-email" id="subscription-email" name="email" placeholder="Phone Number">
+        <form class="subscription-form form-inline" id="subscription-form" method="post">
+            <input type="text" class="subscription-phone" id="subscription-phone" name="PhoneNumber" placeholder="Phone Number">
 
             <div class="subscription-submit-container">
                 <button class="subscription-submit btn btn-large" id="subscription-submit">GET STARTRTED</button>
@@ -29,7 +29,8 @@
 
     <!-- Scripts -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="@Url.Content("~/Content/sunrise/js/jquery.min.js")"><\/script>')</script>    
+    <script>window.jQuery || document.write('<script src="@Url.Content("~/Content/sunrise/js/jquery.min.js")"><\/script>')</script>
+    <script src="~/Content/sunrise/main.config.js"></script>
     <script src="~/Content/sunrise/js/sunrise.js"></script>
 </body>
 </html>
