--- a/SabbathText.Web/Views/Home/Index.cshtml
+++ b/SabbathText.Web/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
     <div class="container">
         <h1 class="page-heading">Sabbath Text</h1>
         <p class="description" style="font-weight: bold; font-style: italic;">
-            &ldquo;Then God blessed the seventh day and made it holy, <br /> because on it he rested from all the work of creating that he had done.&rdquo;
+            &ldquo;Then God blessed the seventh day and made it holy, <br /> because on it He rested from all the work of creating that He had done.&rdquo;
         </p>
 
         <form class="subscription-form form-inline" id="subscription-form" method="post">
