Show subscribe image

--- a/SabbathText.Web/Views/Home/Index.cshtml
+++ b/SabbathText.Web/Views/Home/Index.cshtml
@@ -13,18 +13,25 @@
 
 <body>
     <div class="container">
-        <h1 class="page-heading">Sabbath Text</h1>
-        <p class="description" style="font-weight: bold; font-style: italic;">
-            &ldquo;Then God blessed the seventh day and made it holy, <br /> because on it He rested from all the work of creating that He had done.&rdquo;
-        </p>
+        <div class="row">
+            <div class="col-md-6">
+                <h1 class="page-heading">Sabbath Text</h1>
+                <p class="description" style="font-weight: bold; font-style: italic;">
+                    &ldquo;Then God blessed the seventh day and made it holy, <br /> because on it He rested from all the work of creating that He had done.&rdquo;
+                </p>
 
-        <form class="subscription-form form-inline" id="subscription-form" method="post">
-            <input type="text" class="subscription-phone" id="subscription-phone" name="PhoneNumber" placeholder="Phone Number">
+                <form class="subscription-form form-inline" id="subscription-form" method="post">
+                    <input type="text" class="subscription-phone" id="subscription-phone" name="PhoneNumber" placeholder="Phone Number">
 
-            <div class="subscription-submit-container">
-                <button class="subscription-submit btn btn-large" id="subscription-submit">GET STARTRTED</button>
+                    <div class="subscription-submit-container">
+                        <button class="subscription-submit btn btn-large" id="subscription-submit">GET STARTRTED</button>
+                    </div>
+                </form>
             </div>
-        </form>
+            <div class="col-md-3" style="margin-top: 200px">
+                <img border="0" src="~/Content/images/subscribe.png" />
+            </div>
+        </div>
     </div>
 
     <!-- Scripts -->
