--- a/SabbathText.Web/Views/Home/Index.cshtml
+++ b/SabbathText.Web/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-8">
                 <h1 class="page-heading">Sabbath Text</h1>
                 <p class="description" style="font-weight: bold; font-style: italic;">
                     &ldquo;Then God blessed the seventh day and made it holy, <br /> because on it He rested from all the work of creating that He had done.&rdquo;
@@ -27,9 +27,18 @@
                         <button class="subscription-submit btn btn-large" id="subscription-submit">GET STARTRTED</button>
                     </div>
                 </form>
-            </div>
-            <div class="col-md-3" style="margin-top: 200px">
-                <img border="0" src="~/Content/images/subscribe.png" />
+
+                <p>
+                    We will send you a Bible text to start each Sabbath! <br />
+                    Enter your number above or text &ldquo;Hello&rdquo; to <b>(423) 438-1844</b>.                    
+                </p>
+
+                <p>                    
+                   <img border="0" style="margin-top: 30px; margin-left: 30px;" src="~/Content/images/subscribe.png" />
+                </p>
+            </div>            
+            <div class="col-md-4">
+                <img border="0" style="margin-top: 100px" src="~/Content/images/sabbath.png" />
             </div>
         </div>
     </div>
