--- a/SabbathText.Web/Views/Home/Index.cshtml
+++ b/SabbathText.Web/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-7">
                 <h1 class="page-heading">Sabbath Text</h1>
                 <p class="description" style="font-weight: bold; font-style: italic;">
                     &ldquo;Then God blessed the seventh day and made it holy, <br /> because on it He rested from all the work of creating that He had done.&rdquo;
@@ -30,15 +30,15 @@
 
                 <p>
                     We will send you a Bible text to start each Sabbath! <br />
-                    Enter your number above or text &ldquo;Hello&rdquo; to <b>(423) 438-1844</b>.                    
+                    Enter your number above or text &ldquo;Hello&rdquo; to <span style="color: white; font-weight: bold;">(423) 438-1844</span>.
                 </p>
 
                 <p>                    
                    <img border="0" style="margin-top: 30px; margin-left: 30px;" src="~/Content/images/subscribe.png" />
                 </p>
             </div>            
-            <div class="col-md-4">
-                <img border="0" style="margin-top: 100px" src="~/Content/images/sabbath.png" />
+            <div class="col-md-5">
+                <img border="0" style="margin-top: 100px; margin-left: 30px; margin-bottom: 30px;" src="~/Content/images/sabbath.png" />
             </div>
         </div>
     </div>
