--- a/SabbathText.Web/Views/Home/Index.cshtml
+++ b/SabbathText.Web/Views/Home/Index.cshtml
@@ -41,6 +41,9 @@
                 <img border="0" style="margin-top: 100px; margin-left: 30px; margin-bottom: 30px;" src="~/Content/images/sabbath.png" />
             </div>
         </div>
+        <div style="text-align: center; margin-bottom: 15px;">
+            &copy; 2014 Sabbath Text - Reach us on <a href="http://twitter.com/sabbathtext" style="color: white; text-decoration: underline;">Twitter</a>
+        </div>
     </div>
 
     <!-- Scripts -->
