Fixed view footer wording

--- a/SabbathText.Web/Views/Home/Index.cshtml
+++ b/SabbathText.Web/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div style="text-align: center; margin-bottom: 15px;">
-            &copy; 2014 Sabbath Text - Reach us on <a href="http://twitter.com/sabbathtext" style="color: white; text-decoration: underline;">Twitter</a>
+            &copy; 2014 Sabbath Text - Reach out to us on <a href="http://twitter.com/sabbathtext" style="color: white; text-decoration: underline;">Twitter</a>
         </div>
     </div>
 
