--- a/SabbathText.Web/Views/GetStarted/_GetStartedLayout.cshtml
+++ b/SabbathText.Web/Views/GetStarted/_GetStartedLayout.cshtml
@@ -18,7 +18,7 @@
     </div>
 
     <div style="text-align: center; margin-bottom: 15px;">
-        &copy; 2014 Sabbath Text - Reach us on <a href="http://twitter.com/sabbathtext" style="text-decoration: underline;">Twitter</a>
+        &copy; 2014 Sabbath Text - Reach out to us on <a href="http://twitter.com/sabbathtext" style="text-decoration: underline;">Twitter</a>
     </div>
 </body>
 </html>
