Fixed typo in GET STARTED button

--- a/SabbathText.Web/Views/Home/Index.cshtml
+++ b/SabbathText.Web/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
                     <input type="text" class="subscription-phone" id="subscription-phone" name="phoneNumber" placeholder="Phone Number" required>
 
                     <div class="subscription-submit-container">
-                        <button class="subscription-submit btn btn-large" id="subscription-submit">GET STARTRTED</button>
+                        <button class="subscription-submit btn btn-large" id="subscription-submit">GET STARTED</button>
                     </div>
                 </form>
 
