Change Index view to show the message first

--- a/SabbathText.Web/Views/Home/Index.cshtml
+++ b/SabbathText.Web/Views/Home/Index.cshtml
@@ -20,18 +20,21 @@
                     &ldquo;Then God blessed the seventh day and made it holy, <br /> because on it He rested from all the work of creating that He had done.&rdquo;
                 </p>
 
+                <p>
+                    We will send you a Bible text to start each Sabbath!
+                </p>
+
+                <p>
+                    Enter your phone number below and we will reach out to you, or text &ldquo;Hello&rdquo; to <span style="color: white; font-weight: bold;">(423) 438-1844</span>.
+                </p>
+
                 <form class="subscription-form form-inline" id="subscription-form" method="post" action="@Url.Action("Index", "GetStarted")">
                     <input type="text" class="subscription-phone" id="subscription-phone" name="phoneNumber" placeholder="Phone Number" required>
 
                     <div class="subscription-submit-container">
                         <button class="subscription-submit btn btn-large" id="subscription-submit">GET STARTED</button>
                     </div>
-                </form>
-
-                <p>
-                    We will send you a Bible text to start each Sabbath! <br />
-                    Enter your number above or text &ldquo;Hello&rdquo; to <span style="color: white; font-weight: bold;">(423) 438-1844</span>.
-                </p>
+                </form>                
 
                 <p>                    
                    <img border="0" style="margin-top: 30px; margin-left: 30px;" src="~/Content/images/subscribe.png" />
