Small spacing change for Index

--- a/SabbathText.Web/Views/Home/Index.cshtml
+++ b/SabbathText.Web/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
                     We will send you a Bible text to start each Sabbath!
                 </p>
 
-                <p>
+                <p style="margin-bottom: 30px;">
                     Enter your phone number below and we will reach out to you, or text &ldquo;Hello&rdquo; to <span style="color: white; font-weight: bold;">(423) 438-1844</span>.
                 </p>
 
