--- a/SabbathText.Web/Views/Home/Index.cshtml
+++ b/SabbathText.Web/Views/Home/Index.cshtml
@@ -1,4 +1,9 @@
 ﻿<!doctype html>
+
+@{
+    string thumbnailUrl = "http://www.sabbathtext.com" + Url.Content("~/Content/images/thumbnail-sunset.png");
+}
+
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -6,6 +11,13 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+    <meta property="og:title" content="Sabbath Text" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.sabbathtext.com/" />
+    <meta property="og:image" content="@thumbnailUrl" />
+    <meta property="og:description" content="Start each Sabbath with a Bible text!" />
+
     <link href="//fonts.googleapis.com/css?family=PT+Sans:700,400&subset=cyrillic" rel="stylesheet">
     <link href="~/Content/sunrise/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/sunrise/css/sunrise.css" rel="stylesheet" />
