Added Google analytics

--- a/SabbathText.Web/Views/GetStarted/_GetStartedLayout.cshtml
+++ b/SabbathText.Web/Views/GetStarted/_GetStartedLayout.cshtml
@@ -20,5 +20,7 @@
     <div style="text-align: center; margin-bottom: 15px;">
         &copy; 2014 Sabbath Text - Reach out to us on <a href="http://twitter.com/sabbathtext" style="text-decoration: underline;">Twitter</a>
     </div>
+
+    @Html.Partial("GoogleAnalytics")
 </body>
 </html>
