--- a/SabbathText.Web/Views/Home/Index.cshtml
+++ b/SabbathText.Web/Views/Home/Index.cshtml
@@ -70,5 +70,7 @@
     <script>window.jQuery || document.write('<script src="@Url.Content("~/Content/sunrise/js/jquery.min.js")"><\/script>')</script>
     <script src="~/Content/sunrise/main.config.js"></script>
     <script src="~/Content/sunrise/js/sunrise.js"></script>
+
+    @Html.Partial("GoogleAnalytics")
 </body>
 </html>
