Fixed view typo

--- a/SabbathText.Web/Views/GetStarted/Success.cshtml
+++ b/SabbathText.Web/Views/GetStarted/Success.cshtml
@@ -11,7 +11,7 @@
     </p>
 
     <p>
-        A message will be set to @prettyPhoneNumber shortly!
+        A message will be sent to @prettyPhoneNumber shortly!
         <br />
         If you don't hear from us, please text &ldquo;Hello&rdquo; to <b><i>+1 (423) 438-1844</i></b>
     </p>
