--- a/SabbathText.Web/Views/Auth/Login.cshtml
+++ b/SabbathText.Web/Views/Auth/Login.cshtml
@@ -17,13 +17,13 @@
         <div id="socialLoginList">
             @if (loginProviders.Any() == false)
             {
-                <button type="submit" class="btn btn-default" id="Development" name="provider" value="Development" title="Log in to the Development environment">Development</button>
+                <button type="submit" class="btn btn-default" id="Development" name="provider" value="Development" title="Log in to the Development environment">Login with Development account</button>
             }
             else
             {
                 foreach (AuthenticationDescription p in loginProviders)
                 {
-                    <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                    <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">Login with @p.AuthenticationType account</button>
                 }
             }
         </div>
