Added announcement details to admin view

--- a/SabbathText.Web/Views/ManageAccounts/Details.cshtml
+++ b/SabbathText.Web/Views/ManageAccounts/Details.cshtml
@@ -88,6 +88,22 @@
         <dd>
             @string.Join(", ", Model.RecentVerses)
         </dd>
+
+        <dt>
+            @Html.DisplayNameFor(m => m.SentAnnouncements)
+        </dt>
+
+        <dt>
+            @string.Join(",", Model.SentAnnouncements)
+        </dt>
+
+        <dt>
+            @Html.DisplayNameFor(m => m.LastAnnouncementTextTime)
+        </dt>
+
+        <dt>
+            @Html.DisplayFor(m => m.LastAnnouncementTextTime)
+        </dt>
     </dl>
 </div>
 <p>
